--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+// @import 'nodemodules/bootstrap/dist/css/boostrap.min.css';
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css'
