--- a/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -1,1 +1,26 @@
-<p>aluno-detalhe works!</p>
+<form>
+  <div class="form-group primary">
+    <label for="exampleInputEmail1">Id</label>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ aluno.id }}"
+    />
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email</label>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ aluno.email }}"
+    />
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Email</label>
+    <input
+      type="text"
+      class="form-control"
+      value="{{ aluno.email }}"
+    />
+  </div>
+</form>
