--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -2,13 +2,29 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link"  [routerLink]="['/alunos']">Alunos Home</a>
-        <a class="nav-link"  [routerLink]="['novo']">Cursos</a>
-
-
+        <a class="nav-link" [routerLink]="['/alunos']">Alunos Home</a>
+        <a class="nav-link" [routerLink]="['novo']">Cursos</a>
       </div>
     </div>
   </div>
 </nav>
+<div class="container">
+  <div class="row">
+    <div class="col-md-auto">
+      <div class="list-group">
+        <a
+          class="list-group-item list-group-item-action"
+          *ngFor="let aluno of alunos"
+          [routerLink]="[aluno.id]"
+        >
+          {{ aluno.nome }}
+        </a>
+      </div>
+    </div>
 
-<router-outlet></router-outlet>
+    <div class="col-md-auto">
+      <router-outlet></router-outlet>
+
+    </div>
+  </div>
+</div>
