--- a/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -8,11 +8,12 @@
     />
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail1">Email</label>
+    <label for="exampleInputEmail1">Nome</label>
     <input
       type="text"
       class="form-control"
-      value="{{ aluno.email }}"
+      value="{{ aluno.nome }}"
+      (input)="onInput()"
     />
   </div>
   <div class="form-group">
