--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,18 +1,14 @@
-<nav class="navbar-secundary navbar-expand-lg navbar-primary bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <!-- <a class="nav-link"  [routerLink]="['/']">Home</a> -->
-        <a class="nav-link"  [routerLink]="['/curso']" [queryParams]="{pagina:1}">Cursos</a>
-        <!-- <a class="nav-link"  [routerLink]="['/login']">Login</a> -->
-        <!-- <a class="nav-link"  [routerLink]="['curso', idCurso.value]">Curso detalhe</a> -->
-        <a class="nav-link"  [routerLink]="['/alunos']">Alunos</a>
-      </div>
-    </div>
+
+
+<nav *ngIf="mostrarMenu">
+  <div class="nav-wrapper">
+    <a [routerLink]="" class="brand-logo right">Angular Route</a>
+    <ul class="left hide-on-med-and-down">
+      <li><a [routerLink]="['/login']">Login</a></li>
+      <li><a [routerLink]="['/curso']" [queryParams]="{pagina:1}">Cursos</a></li>
+      <li><a [routerLink]="['/alunos']">Alunos</a></li>
+      <!-- <li class="active"><a href="collapsible.html">JavaScript</a></li> -->
+    </ul>
   </div>
 </nav>
 
