--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 // @import 'nodemodules/bootstrap/dist/css/boostrap.min.css';
-@import '../node_modules/bootstrap/dist/css/bootstrap.min.css'
+// @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import "~materialize-css/dist/css/materialize.css";
