--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -8,12 +8,14 @@
     </div>
   </div>
 </nav>
-<div class="container">
-  <div class="row">
+
+<div class="row">
+  <div class="col s12 m4 l3">
+    <!-- Note that "m4 l3" was added -->
     <div class="col-md-auto">
-      <div class="list-group">
+      <div class="collection">
         <a
-          class="list-group-item list-group-item-action"
+          class="collection-item"
           *ngFor="let aluno of alunos"
           [routerLink]="[aluno.id]"
         >
@@ -21,10 +23,12 @@
         </a>
       </div>
     </div>
+  </div>
 
+  <div class="col s12 m8 l9">
+    <!-- Note that "m8 l9" was added -->
     <div class="col-md-auto">
       <router-outlet></router-outlet>
-
     </div>
   </div>
 </div>
